# brief_scraping_scrapy

./: .gitignore  README.md  pyproject.toml
filmscraper/filmscraper/: items.py  pipelines.py  settings.py
filmscraper/filmscraper/spiders/: film_crawl.py
series_scraper/: data_series.csv  scrapy.cfg
series_scraper/series_scraper/: items.py  middlewares.py  pipelines.py  settings.py
series_scraper/series_scraper/spiders/: seriesscraper.py
